[project]
name = "wled-build"
version = "0.1.0"
description = "Build orchestrator for WLED firmware with WireGuard support"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
wled-build = "wled_build.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wled_build"]
